# typingterm

./: .gitignore  Cargo.toml  README.md  build.rs  frame  frame.c  frame.h  linkedlist.c  linkedlist.h  m  main.c  makefile  misc_test.c  strlist.c  strlist.h  strlist_test  strlist_test.c  test.c  tterm  typingtest.c
data/: quotes.txt  themes.json
data/code/: c.txt  cpp.txt  go.txt  java.txt  javascript.txt  python.txt  rust.txt  typescript.txt
data/languages/: _index.txt  afrikaans.txt  afrikaans_10k.txt  afrikaans_1k.txt  albanian.txt  albanian_1k.txt  amharic.txt  amharic_1k.txt  amharic_5k.txt  arabic_10k.txt  arabic_egypt.txt  arabic_egypt_1k.txt  arabic_morocco.txt  armenian.txt  armenian_1k.txt  armenian_western.txt  armenian_western_1k.txt  azerbaijani.txt  azerbaijani_1k.txt  bangla.txt  bangla_10k.txt  bangla_letters.txt  bashkir.txt  belarusian.txt  belarusian_100k.txt  belarusian_10k.txt  belarusian_1k.txt  belarusian_25k.txt  belarusian_50k.txt  belarusian_5k.txt  belarusian_lacinka.txt  belarusian_lacinka_1k.txt  bosnian.txt  bosnian_4k.txt  bulgarian.txt  bulgarian_1k.txt  bulgarian_latin.txt  bulgarian_latin_1k.txt  catalan.txt  catalan_1k.txt  (+289 more)
src/: app.rs  config.rs  frame.c  main.rs  persist.rs  strlist.c  strlist.h  test.c  theme.rs  typing.rs  typingtest.c  ui.rs  words.rs
