[package]
name = "typingterm"
version = "0.1.0"
edition = "2021"
description = "A monkeytype-inspired terminal typing test"
license = "MIT"
repository = "https://github.com/nathom/typingterm"
keywords = ["typing", "terminal", "tui", "monkeytype"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
